// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component should match snapshot with 2 tabs 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
      },
    ]
  }
  testID="loans_tabs"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "width": "50%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(255, 0, 175, 1)",
          "borderBottomWidth": 2,
          "borderLeftColor": "rgba(255, 0, 175, 1)",
          "borderRightColor": "rgba(255, 0, 175, 1)",
          "borderTopColor": "rgba(255, 0, 175, 1)",
          "display": "flex",
          "opacity": 1,
        }
      }
      testID="loans_tabs_BROWSE_LOANS"
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "SemiBoldFont",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(0, 0, 0, 1)",
                },
              ],
            ]
          }
        >
          Browse loan tokens
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "width": "50%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "transparent",
          "borderBottomWidth": 2,
          "borderLeftColor": "transparent",
          "borderRightColor": "transparent",
          "borderTopColor": "transparent",
          "display": "flex",
          "opacity": 1,
        }
      }
      testID="loans_tabs_YOUR_VAULTS"
    >
      <View
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "rgba(255, 255, 255, 1)",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(229, 229, 229, 1)",
                },
              ],
            ]
          }
        >
          Your vaults
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Tabs component should match snapshot with 5 tabs 1`] = `
<View
  style={
    Object {
      "height": 48,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 12,
      }
    }
    horizontal={true}
    showsHorizontalScrollIndicator={false}
    style={
      Array [
        Object {
          "display": "flex",
          "flexBasis": "0%",
          "flexDirection": "row",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginRight": -24,
        },
        Object {
          "backgroundColor": "rgba(255, 255, 255, 1)",
        },
      ]
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 0, 175, 1)",
            "borderBottomWidth": 2,
            "borderLeftColor": "rgba(255, 0, 175, 1)",
            "borderRightColor": "rgba(255, 0, 175, 1)",
            "borderTopColor": "rgba(255, 0, 175, 1)",
            "display": "flex",
            "marginRight": 24,
            "opacity": 1,
          }
        }
        testID="loans_tabs_BROWSE_LOANS"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontFamily": "SemiBoldFont",
                  "fontSize": 16,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(0, 0, 0, 1)",
                },
              ],
            ]
          }
        >
          Browse loan tokens
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderRightColor": "transparent",
            "borderTopColor": "transparent",
            "display": "flex",
            "marginRight": 24,
            "opacity": 1,
          }
        }
        testID="loans_tabs_YOUR_VAULTS"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Your vaults
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderRightColor": "transparent",
            "borderTopColor": "transparent",
            "display": "flex",
            "marginRight": 24,
            "opacity": 1,
          }
        }
        testID="loans_tabs_COLLATERAL"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(229, 229, 229, 1)",
                },
              ],
            ]
          }
        >
          Collateral
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderRightColor": "transparent",
            "borderTopColor": "transparent",
            "display": "flex",
            "marginRight": 24,
            "opacity": 1,
          }
        }
        testID="loans_tabs_AUCTION"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Auction
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "borderBottomColor": "transparent",
            "borderBottomWidth": 2,
            "borderLeftColor": "transparent",
            "borderRightColor": "transparent",
            "borderTopColor": "transparent",
            "display": "flex",
            "marginRight": 24,
            "opacity": 1,
          }
        }
        testID="loans_tabs_AUCTION2"
      >
        <Text
          style={
            Array [
              Object {
                "fontFamily": "RegularFont",
                "fontSize": 16,
                "fontWeight": "400",
                "lineHeight": 24,
              },
              Array [
                Object {
                  "fontSize": 16,
                  "lineHeight": 24,
                  "paddingBottom": 12,
                  "textAlign": "center",
                },
                Object {
                  "color": "rgba(115, 115, 115, 1)",
                },
              ],
            ]
          }
        >
          Auction
        </Text>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
